syntax = "proto3";

import "BlossomBriefInfo.proto";

option java_package = "emu.grasscutter.net.proto";

// CmdId: 2712
// EnetChannelId: 0
// EnetIsReliable: true
// IsAllowClient: true
message BlossomBriefInfoNotify {
    repeated BlossomBriefInfo brief_info_list = 4;
}