syntax = "proto3";

option java_package = "emu.grasscutter.net.proto";

import "Vector.proto";

message BlossomBriefInfo {
	uint32 refresh_id = 1;
	uint32 circle_camp_id = 2;
	uint32 city_id = 3;
	uint32 resin = 4;
	Vector pos = 5;
	uint32 reward_id = 6;
	uint32 monster_level = 7;
	bool is_guide_opened = 8;
	uint32 state = 9;
	uint32 scene_id = 10;
}
